ayush_tic_tac_toe_game.html

--- a/ayush_tic_tac_toe_game.html
+++ b/ayush_tic_tac_toe_game.html
@@ -339,7 +339,7 @@
             gameActive = false;
             scores[currentPlayer]++;
             updateScores();
-            document.getElementById('status').textContent = Player ${currentPlayer} wins!;
+            document.getElementById('status').textContent = `Player ${currentPlayer} wins!`;
         }
 
         function handleDraw() {
@@ -368,7 +368,7 @@
                 if (gameMode === 'ai' && currentPlayer === 'O') {
                     document.getElementById('status').textContent = 'AI is thinking...';
                 } else {
-                    document.getElementById('status').textContent = Player ${currentPlayer}'s turn;
+                    document.getElementById('status').textContent = `Player ${currentPlayer}'s turn`;
                 }
             }
         }
